# chesscog

./: Pipfile  laps.py  main.py  pyproject.toml  requirements.txt  train.py
data/models/: laps.h5  laps.model.json  laps.weights.h5
