[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
keras = "^3.0.5"
tensorflow = {extras = ["and-cuda"], version = "^2.16.1"}
pyclipper = "^1.3.0.post5"
matplotlib = "^3.8.3"
scipy = "^1.13.0"
numpy = "^1.26.4"
h5py = "^3.11.0"
tables = "^3.9.2"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
